--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sheet_routine",
   "license": "0BSD",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,10 +10,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "date-fns": "^4.1.0",
     "expo": "~52.0.25",
+    "expo-constants": "~17.0.4",
+    "expo-linking": "~7.0.4",
+    "expo-router": "~4.0.16",
     "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.7",
+    "expo-updates": "~0.26.12",
     "react": "18.3.1",
-    "react-native": "0.76.6"
+    "react-dom": "18.3.1",
+    "react-native": "0.76.6",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-toast-message": "^2.2.1",
+    "react-native-web": "~0.19.13",
+    "react-native-web-refresh-control": "^1.1.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
